test/corpus/expressions.txt
============================================
Variable declare
============================================

var x
var y = 42
var z = x + y

---

(source_file
  (expression
    (expression_var_declare
      name: (identifier)))
  (separator)
  (expression
    (expression_var_declare
      name: (identifier)
      value: (expression
        (number))))
  (separator)
  (expression
    (expression_var_declare
      name: (identifier)
      value: (expression
        (expression_binary
          (expression
            (expression_lookup
              (identifier)))
          (expression
            (expression_lookup
              (identifier)))))))
  (separator))

============================================
Variable Modify
============================================

x = 1
x += 1
x -= 1
x *= 1
x /= 1
x %= 1
x ??= 1
x |= 1
x &= 1

---

(source_file
  (expression
    (expression_modify
      left: (identifier)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (identifier)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (identifier)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (identifier)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (identifier)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (identifier)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (identifier)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (identifier)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (identifier)
      right: (expression
        (number))))
  (separator))

============================================
Key Modify
============================================

$x = 1
$x += 1
$x -= 1
$x *= 1
$x /= 1
$x %= 1
$x ??= 1
$x |= 1
$x &= 1

---

(source_file
  (expression
    (expression_modify
      left: (key)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (key)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (key)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (key)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (key)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (key)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (key)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (key)
      right: (expression
        (number))))
  (separator)
  (expression
    (expression_modify
      left: (key)
      right: (expression
        (number))))
  (separator))

============================================
Unary expression
============================================

!x
-true
-!10

---

(source_file
  (expression
    (expression_unary
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_unary
      (expression
        (expression_lookup
          (constant)))))
  (separator)
  (expression
    (expression_unary
      (expression
        (expression_unary
          (expression
            (number))))))
  (separator))

============================================
Binary expression
============================================

x ?? y
x || y
x && y
x == y
x != y
x < y
x > y
x <= y
x >= y
x + y
x - y
x * y
x / y
x % y

---

(source_file
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator)
  (expression
    (expression_binary
      (expression
        (expression_lookup
          (identifier)))
      (expression
        (expression_lookup
          (identifier)))))
  (separator))

============================================
Implicit block
============================================

1
x;y;z
x; y ; z
x;

---

(source_file
  (expression
    (number))
  (separator)
  (expression
    (expression_lookup
      (identifier)))
  (separator)
  (expression
    (expression_lookup
      (identifier)))
  (separator)
  (expression
    (expression_lookup
      (identifier)))
  (separator)
  (expression
    (expression_lookup
      (identifier)))
  (separator)
  (expression
    (expression_lookup
      (identifier)))
  (separator)
  (expression
    (expression_lookup
      (identifier)))
  (separator)
  (expression
    (expression_lookup
      (identifier)))
  (separator))

============================================
Explicit block
============================================

{}
{  }
{

}
{1}
{1;2;3}
{
  1
}
{
  1
  2
}
{
  1
  2;
  3
}

---

(source_file
  (expression
    (block_explicit))
  (separator)
  (expression
    (block_explicit))
  (separator)
  (expression
    (block_explicit))
  (separator)
  (expression
    (block_explicit
      (expression
        (number))))
  (separator)
  (expression
    (block_explicit
      (expression
        (number))
      (separator)
      (expression
        (number))
      (separator)
      (expression
        (number))))
  (separator)
  (expression
    (block_explicit
      (expression
        (number))
      (separator)))
  (separator)
  (expression
    (block_explicit
      (expression
        (number))
      (separator)
      (expression
        (number))
      (separator)))
  (separator)
  (expression
    (block_explicit
      (expression
        (number))
      (separator)
      (expression
        (number))
      (separator)
      (expression
        (number))
      (separator)))
  (separator))
